2017-02-07  Luigi Scarso <luigi.scarso@gmail.com>

	* luaffi/: First attempt to implement the ffi module in lua
	compatible with the ffi module of luajit.

2015-11-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* luatex.c: Improve a little (w32 only).

2015-10-31  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/inputstack.w: Sync with the upstream.

2015-10-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/mlist.w: Sync with the upstream.

2015-10-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* luatex.c: Sync with the upstream.
	* font/luatexfont.h, font/writetype2.w: Sync with the upstream.

2015-10-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* lua/lepdflib.cc, tex/texnodes.h, tex/texnodes.w, NEWS:
	Sync with the upstream.
	* luatex.c: beta-0.81.0.

2015-10-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libluatex.am, am/luafontforge.am: Rearrange to compile the
	luafontloader/src/* files as part of liblua(jit)tex.a, such that
	there is only one libff.a used for LuaTeX and LuaJITTeX.

2015-10-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Sync with the upstream trunk.
	* image/epdf.h: Support Visual Studio 2010 for log().

2015-10-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Completely sync with the upstream trunk.
	Changed files are
	font/writecff.w, font/writefont.w,
	lua/lnodelib.c, lua/lpdflib.c, lua/luatoken.w,
	luafontloader/fontforge/fontforge/lookups.c,
	luafontloader/fontforge/fontforge/parsettf.c,
	luafontloader/fontforge/fontforge/parsettfatt.c,
	luafontloader/fontforge/fontforge/splinefont.h,
	luafontloader/fontforge/fontforge/tottf.c,
	luafontloader/src/luafflib.c,
	luatex.c,
	tex/commands.w, tex/dumpdata.w, tex/equivalents.h, tex/filename.w,
	tex/maincontrol.w, tex/printing.w, tex/texmath.w.

2015-10-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdf/pdfgen.w: Sync with the upstream trunk.

2015-09-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/lepdflib.cc: Drop useless casts 'const char *' -> 'char *'